// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button when given an href adds target _blank when newTab is set to true 1`] = `
<div>
  <a
    class="btn btnSmall blueTheme"
    href="/example"
    target="_blank"
  >
    Submit
  </a>
</div>
`;

exports[`Button when given an href can render with a non-default theme 1`] = `
<div>
  <a
    class="btn btnLarge greenTheme"
    href="/example"
  >
    Submit
  </a>
</div>
`;

exports[`Button when given an href can render with the small size class 1`] = `
<div>
  <a
    class="btn btnSmall blueTheme"
    href="/example"
  >
    Submit
  </a>
</div>
`;

exports[`Button when given an href renders an "a" tag 1`] = `
<div>
  <a
    class="btn btnLarge blueTheme"
    href="/example"
  >
    Submit
  </a>
</div>
`;

exports[`Button when not given an href accepts a type prop 1`] = `
<div>
  <button
    class="btn btnSmall blueTheme"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`Button when not given an href can render a disabled button 1`] = `
<div>
  <button
    class="btn btnSmall blueTheme"
    disabled=""
  >
    Submit
  </button>
</div>
`;

exports[`Button when not given an href can render with a non-default theme 1`] = `
<div>
  <button
    class="btn btnLarge greenTheme"
  >
    Submit
  </button>
</div>
`;

exports[`Button when not given an href can render with the small size class 1`] = `
<div>
  <button
    class="btn btnSmall blueTheme"
  >
    Submit
  </button>
</div>
`;

exports[`Button when not given an href renders a button 1`] = `
<div>
  <button
    class="btn btnLarge blueTheme"
  >
    Submit
  </button>
</div>
`;
